--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
+@import url(reset.css);
 :root {
     --main-border-color: #61c7d4;
-    --title-color: #646464;
+    --title-color: #383838;
     --link-color: #2167b8;
 }
 body {
@@ -19,8 +20,9 @@ main {
     width: 100%;
     margin: 0 25px;
 }
+
 section {
-    margin-top: 50px;
+    margin: 25px 0;
 }
 .container-info {
     display: flex;
@@ -72,4 +74,26 @@ section {
 .section-card-image p {
     font-size: 13px;
     color: #000000;
+}
+
+footer {
+    border-top: 1px solid var(--main-border-color);
+    padding: 30px 0 40px 0;
+}
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.container p {
+    font-size: 13px;
+}
+.footer-nav {
+    margin-top: 13px;
+}
+.footer-nav a {
+    font-size: 12px;
+    margin-right: 12px;
+}
+.footer-nav a:last-of-type {
+    margin-right: 0;
 }
